# relayna

./: .dockerignore  .gitignore  .gitleaks.toml  .semgrep.yml  AGENTS.md  BEHAVIOR_PARITY.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  Makefile  PLANS.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.codex/plans/: issues-72-73-studio-gateway-ghcr.md  production-freeze-test-perimeter.md
.codex/skills/code-change-verification/: SKILL.md
.codex/skills/implementation-strategy/: SKILL.md
.codex/skills/pr-draft-summary/: SKILL.md
.codex/skills/production-freeze-guard/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md  studio_issue.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/codex/prompts/: pr-labels.md  release-review.md
.github/codex/schemas/: pr-labels.json
.github/workflows/: ci.yml  docs.yml  release.yml
apps/studio/: Dockerfile  Makefile  index.html  package-lock.json  package.json  vite.config.ts
apps/studio/nginx/: default.conf.template
apps/studio/src/: App.test.tsx  App.tsx  api.ts  main.tsx  production-freeze.test.tsx  services-context.tsx  studio.css  types.ts  ui.tsx
docs/: aks-observability.md  components.md  development.md  execution-graphs.md  getting-started.md  index.md  migration-v1-to-v2.md  observability.md  redis-keys.md  releases.md  runtime-controls.md  security-exceptions.md  studio-backend.md  studio-frontend.md  workflow-topology-plan.md
docs/assets/: mermaid-init.js
docs/assets/stylesheets/: extra.css
internal/: runtime-policy-engine-plan.md  service-pod-log-panel-plan.md  service-pod-metrics-panel-plan.md  studio-control-plane-roadmap.md  studio-deployment.md  studio-failed-task-email-notifications.md  studio-observability-log-metrics-plan.md
internal/runtime-next-phase/: README.md  adaptive-retry-policies.md  dlq-diagnosis-bundles.md  execution-graph-live-state.md  runtime-backpressure-signals.md  runtime-policy-engine.md  task-leases-and-heartbeat-expiry.md
plans/: concurrent-task-consumer-dispatch.md  retry-priority-statushub-failfast.md
scripts/: deploy-relayna-observability-aks.sh  real_aggregation_retry_dead_letter_smoke.py  real_alias_batch_task_smoke.py  real_execution_graph_smoke.py  real_fastapi_status_smoke.py  real_manual_retry_routed_smoke.py  real_queue_args_smoke.py  real_retry_dead_letter_smoke.py  real_sharded_aggregation_smoke.py  real_stack_common.py  real_task_worker_smoke.py  real_workflow_smoke.py  studio_mock_services.py  tempo-local.yaml  validate-release-metadata.py
src/relayna/: __init__.py  config.py  consumer.py  contracts.py  dlq.py  fastapi.py  history.py  metrics.py  observability.py  rabbitmq.py  sse.py  status_hub.py  status_store.py  topology.py
src/relayna/api/: __init__.py  backpressure_routes.py  capabilities_routes.py  events_routes.py  execution_routes.py  fastapi_lifespan.py  health_routes.py  replay_routes.py  schemas.py  status_routes.py  workflow_routes.py
src/relayna/consumer/: __init__.py  _retry_decision.py  context.py  idempotency.py  lifecycle.py  middleware.py  task_consumer.py  workflow_consumer.py
src/relayna/contracts/: __init__.py  aliases.py  compatibility.py  schemas.py  status.py  task.py  workflow.py
src/relayna/dlq/: __init__.py  broker.py  models.py  replay.py  service.py  store.py
src/relayna/mcp/: __init__.py  adapters.py  resources.py  server.py  tools_ops.py  tools_read.py
src/relayna/observability/: __init__.py  alerts.py  backpressure.py  collectors.py  events.py  execution_graph.py  exporters.py  feed.py  log_contract.py  stage_metrics.py  store.py  task_timeline.py  tracing.py
src/relayna/policies/: __init__.py  retry.py
studio/backend/: Dockerfile  Makefile  pyproject.toml
studio/backend/src/relayna_studio/: __init__.py  __main__.py  app.py  asgi.py  config.py  dlq_view.py  events.py  execution_view.py  factory.py  failed_task_notifications.py  federation.py  health.py  logs.py  metrics.py  registry.py  run_view.py  search.py  stage_view.py  topology_view.py  traces.py
studio/backend/tests/: conftest.py  test_asgi.py  test_deployment_assets.py  test_failed_task_notifications.py  test_package_surface.py  test_production_freeze_routes.py  test_production_freeze_surface.py  test_studio_events.py  test_studio_federation.py  test_studio_health.py  test_studio_logs.py  test_studio_metrics.py  test_studio_registry.py  test_studio_search.py  test_studio_traces.py
studio/backend/tests/freeze/: feature_perimeter.json  public_surface.json  routes.json
tests/: test_backpressure.py  test_capabilities_routes.py  test_ci_hardening.py  test_consumer.py  test_contracts.py  test_dlq.py  test_execution_graph.py  test_fastapi_lifespan.py  test_internal_roadmap.py  test_metrics.py  test_observability.py  test_package_export_consistency.py  test_package_root.py  test_production_freeze_routes.py  test_production_freeze_surface.py  test_public_api_imports.py  test_release_metadata.py  test_retry_decision.py  test_routing.py  test_service_event_feed.py  test_sse.py  test_status_hub.py  test_status_store.py  test_studio_events.py  test_studio_federation.py  test_studio_health.py  test_studio_logs.py  test_studio_registry.py  test_studio_search.py  test_task_leases.py  test_v2_packages.py
tests/freeze/: feature_perimeter.json  public_surface.json  routes.json
(+63 files in other folders)
