[project]
name = "relayna"
version = "1.4.3"
description = "Shared RabbitMQ/Redis infrastructure for Relayna."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Sarattha", email = "j.sarattha@gmail.com" },
]
maintainers = [
    { name = "Sarattha", email = "j.sarattha@gmail.com" },
]
keywords = ["rabbitmq", "redis", "sse", "fastapi", "queueing", "event-streaming"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "aio-pika>=9.4.1",
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "pydantic>=2.11.0",
    "redis>=7.1.1",
]

[project.urls]
Homepage = "https://github.com/sarattha/relayna"
Documentation = "https://sarattha.github.io/relayna/"
Issues = "https://github.com/sarattha/relayna/issues"
Releases = "https://github.com/sarattha/relayna/releases"
Repository = "https://github.com/sarattha/relayna"

[project.optional-dependencies]
dev = [
    "mkdocs>=1.6.1",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "twine>=6.1.0",
    "pytest",
    "pytest-asyncio",
    "pytest-mock>=3.14.0",
    "pytest-xdist",
    "rich>=13.1.0, <14",
    "mkdocs-material>=9.6.0",
    "mkdocstrings[python]>=0.28.0",
    "mkdocs-static-i18n",
    "ruff==0.9.2",
    "ty"
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.lint.pydocstyle]
convention = "google"
